Bug 1867289 - Do not rebuild platform.ini on artifact builds r=nalexander,glandium,mkaply

Differential Revision: https://phabricator.services.mozilla.com/D198016